Fix MB profile button
and outline buttons, broken in a previous commit by removing border

--- a/frontend/css/follow.less
+++ b/frontend/css/follow.less
@@ -6,6 +6,7 @@
   }
   font-family: "Sintony", sans-serif;
   color: @white;
+  border: 2px solid @blue;
   background: @blue;
   font-weight: bold;
   padding: 5px 8px;
@@ -96,4 +97,12 @@
 .follower-following-empty,
 .similar-users-empty {
   padding: 10px 20px;
+}
+
+.musicbrainz-profile-button {
+    color: #fff;
+    background: @blue;
+    padding: 5px 8px;
+    border-radius: 4px;
+    transition: background .42s;
 }
